--- a/styles.scss
+++ b/styles.scss
@@ -483,42 +483,55 @@ td.year {
 
 /** PROJECT DETAILS PAGE **/
 
-// used for Tech Stack and Noteworthy subheaders in project details page
-.project-section {
-    margin: 20px 0px 5px;
+.all-project-details {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+// left side
+.project-details-container {
+    width: 350px;
+}
+
+// right side
+.project-images-container {
+    width: calc(100% - 400px);
+}
+
+.details-container {
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.65);
+    padding: 25px;
+    border-top: 10px solid $light-accent-color;
+    margin: 0px 0px 15px;
 }
 
 .project-title {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .project-subtitle {
     margin-bottom: 15px;
 }
 
+// used for Tech Stack and Noteworthy subheaders in project details page
+.project-section {
+    margin: 20px 0px 5px;
+}
+
 // for links to code and demo
 .project-links {
     font-size: 1.3em;
-    margin: 20px 0px;
+    margin: 20px 0px 0px;
 }
 
-.project-detail-image {
-    width: 90%;
+.project-detail-image { // FIXME: replace with gallery
+    width: 100%;
     border: 1px solid $muted-color;
-    margin: 30px 0px -15px 30px;
+    margin: 30px 0px 0px 40px;
 }
 
-// space between project details and images when side-by-side
-.project-details-row, 
-    .project-details-row > .project-details-col {
-    padding: 10px;
-}
-
-// columns for project details page
-.project-details-col {
-    float: left;
-    width: 50%;
-}
 
 
 /**** MEDIA QUERIES FOR RESPONSIVE CONTENT ****/
@@ -532,6 +545,18 @@ td.year {
     }
     .history-pic {
         width: 50%;
+    }
+    .all-project-details {
+        flex-direction: column;
+    }
+    .project-details-container {
+        width: 100%;
+    }
+    .project-images-container {
+        width: 100%;
+    } 
+    .project-detail-image {
+        margin: 30px 0px 0px;
     }
 }
 
@@ -553,13 +578,6 @@ td.year {
     .gallery-container {
         columns: 1;
     }
-    .project-details-col {
-        width: 100%;
-    }
-    .project-detail-image {
-        width: 100%;
-        margin: 15px 0px 0px;
-    }   
     
 }
 
